[package]
name = "conforming"
version = "0.1.0"
edition = "2021"

[features]
default = ["chrono"]

chrono = ["dep:chrono"]

[dependencies]
chrono = { version = "0.4.19", optional = true, features = ["serde"] }
conforming_macros = { path = "./conforming_macros" }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

[dev-dependencies]
pretty_assertions = "1.2.1"
